[gd_scene load_steps=2 format=3 uid="uid://doobboy2s2mwl"]

[ext_resource type="Script" uid="uid://dwuw8ubss62md" path="res://examples/fetch_demo.gd" id="1"]

[node name="FetchDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = 690.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProjectLine" type="LineEdit" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
placeholder_text = "Enter project URL or ID"

[node name="FetchButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Fetch"

[node name="StatusLabel" type="Label" parent="VBox"]
modulate = Color(0.55, 0.55, 0.55, 1)
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Ready"
horizontal_alignment = 1

[node name="Result" type="RichTextLabel" parent="VBox"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
